# FritzBoxCallMonitor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
CallMonitor/resources/: Icon.rc  Images.qrc
CallMonitor/src/: FritzBox.cpp  FritzBox.hpp  FritzBoxPhoneBook.cpp  FritzBoxPhoneBook.hpp  MillisecondsProperty.cpp  MillisecondsProperty.hpp  MonitorApplication.cpp  MonitorApplication.hpp  MonitorMainWindow.cpp  MonitorMainWindow.hpp  MonitorMainWindowModel.cpp  MonitorMainWindowModel.hpp  MonitorResources.cpp  MonitorResources.hpp  MonitorSettings.cpp  MonitorSettings.hpp  MonitorSettingsDialog.cpp  MonitorSettingsDialog.hpp  MonitorSettingsDialogModel.cpp  MonitorSettingsDialogModel.hpp  MonitorTrayIcon.cpp  MonitorTrayIcon.hpp  MonitorVersion.cpp  MonitorVersion.h.in  MonitorVersion.hpp  PhoneBook.cpp  PhoneBook.hpp  Settings.cpp  Settings.hpp  main.cpp
CallMonitor/test/: Data.qrc  FRITZ.Box_Telefonbuch.xml  FritzBoxData.cpp  FritzBoxData.hpp  FritzBoxPhoneBookTest.cpp  FritzBoxPhoneBookTest.hpp  FritzBoxTest.cpp  FritzBoxTest.hpp  PhoneBookTest.cpp  TestMain.cpp
CallMonitor/translations/: Translations.qrc  fritzboxcallmonitor_de.qm  fritzboxcallmonitor_de.ts
Simulator/src/: SimulatorMainWindow.cpp  SimulatorMainWindow.hpp  main.cpp
